<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    tools:context=".view.fragment.StartScreen">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="190dp"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />


    <Button
        android:id="@+id/registrationButton"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textAllCaps="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:backgroundTint="@color/pink"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationButton"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/joinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_to_city_adventure"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.81" />
</androidx.constraintlayout.widget.ConstraintLayout>