<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/pattern"
    tools:context=".view.fragment.RegistrationScreen">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_password"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UserNameTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="32dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:hintEnabled="false"
        app:boxStrokeColor="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/pink"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registrationButton"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/registration"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Use Touch ID"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationButton"
        app:layout_constraintVertical_bias="0.55" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/googleLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_google_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.37" />

    <ImageView
        android:id="@+id/facebookLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_facebook_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/googleLogin"
        app:layout_constraintTop_toTopOf="@+id/googleLogin"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/twitterLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_twitter_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/facebookLogin"
        app:layout_constraintVertical_bias="0.0" />





</androidx.constraintlayout.widget.ConstraintLayout>